# mas_common_robotics

./: .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  Doxyfile  README.md  docker-compose.yml  mas-common.rosinstall  repository.debs  repository.rosinstall  sonar-project.properties
mcr_common/mcr_algorithms/: CMakeLists.txt  package.xml
mcr_common/mcr_common_converters/: CMakeLists.txt  package.xml  setup.py
mcr_common/mcr_common_converters/common/src/: motion_direction_calculation.cpp
mcr_common/mcr_common_converters/ros/config/: pose_error_to_pose_converter.yaml  relative_displacement_calculator.yaml  twist_to_motion_direction_conversion.yaml
mcr_common/mcr_common_converters/ros/launch/: pose_error_to_pose_converter.launch  pose_error_to_pose_converter.test  relative_displacement_calculator.launch  transform_to_pose_converter.launch  transform_to_pose_converter.test  twist_to_motion_direction_conversion.launch
mcr_common/mcr_common_converters/ros/scripts/: pose_error_to_pose_converter_node
mcr_common/mcr_common_converters/ros/src/: twist_to_motion_direction_conversion_node.cpp
mcr_common/mcr_common_converters/ros/test/: pose_error_to_pose_converter_test.py  relative_displacement_calculator_test.py
mcr_common/mcr_common_msgs/: CMakeLists.txt  package.xml
mcr_common/mcr_common_msgs/msg/: Float64Stamped.msg
mcr_common/mcr_java_messages/: CMakeLists.txt  build.gradle  package.xml
mcr_common/mcr_pose_generator/: CMakeLists.txt  package.xml  setup.py
mcr_common/mcr_pose_generator/ros/launch/: pose_generator.launch  pose_generator.test  sampling_parameter_gui.launch
mcr_common/mcr_topic_tools/: CMakeLists.txt  package.xml
mcr_common/mcr_topic_tools/ros/src/: topic_mux.cpp
mcr_controllers/mcr_multi_joint_forward_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml  ros_control_plugins.xml
mcr_controllers/mcr_multi_joint_forward_controller/ros/src/: multi_joint_forward_controller.cpp
mcr_controllers/mcr_multi_joint_forward_controller/ros/test/: multi_joint_forward_controller_test.cpp
mcr_controllers/mcr_twist_controller/: CMakeLists.txt  README.md  package.xml  setup.py
mcr_controllers/mcr_twist_controller/ros/launch/: pose_error_mock_up_gui.launch  twist_controller.launch  twist_controller.test
mcr_controllers/mcr_twist_controller/ros/test/: twist_controller_test.py  twist_controller_unittest.py
mcr_controllers/mcr_twist_demultiplexer/: CMakeLists.txt  README.md  package.xml
mcr_controllers/mcr_twist_demultiplexer/ros/launch/: twist_demultiplexer.launch
mcr_controllers/mcr_twist_demultiplexer/ros/src/: twist_demultiplexer_node.cpp
mcr_controllers/mcr_twist_synchronizer/: CMakeLists.txt  README.md  package.xml  setup.py
mcr_controllers/mcr_twist_synchronizer/ros/launch/: twist_synchronizer.launch  twist_synchronizer.test
mcr_controllers/mcr_twist_synchronizer/ros/test/: twist_synchronizer_test.py  twist_synchronizer_unittest.py
mcr_drivers/mcr_aravis_vision/: .gitignore  CMakeLists.txt  package.xml
mcr_drivers/mcr_aravis_vision/common/src/: aravis_wrapper.cpp
mcr_drivers/mcr_aravis_vision/common/test/: test_aravis_wrapper.cpp
mcr_drivers/mcr_aravis_vision/ros/config/: AravisVision.cfg  stemmer_cvc_eh6500.yaml
mcr_drivers/mcr_aravis_vision/ros/src/: aravis_camera_node.cpp
mcr_drivers/mcr_aravis_vision/ros/tools/: test_zoom_position.py  test_zoom_velocity.py
mcr_drivers/mcr_kinect_led/: CMakeLists.txt  package.xml
mcr_drivers/mcr_kinect_led/ros/src/: kinect_led_node.cpp
mcr_drivers/mcr_ptu46/: CMakeLists.txt  package.xml
mcr_drivers/mcr_ptu46/ros/launch/: ptu46.launch
mcr_manipulation/mcr_arm_cartesian_control/: CMakeLists.txt  README.md  package.xml
mcr_manipulation/mcr_arm_cartesian_control/common/src/: arm_cartesian_control.cpp
mcr_manipulation/mcr_arm_cartesian_control/ros/launch/: example.launch
mcr_manipulation/mcr_arm_cartesian_control/ros/src/: arm_cartesian_control_node.cpp  ros_arm_cartesian_control.cpp
mcr_manipulation/mcr_arm_motions/: CMakeLists.txt  package.xml  setup.py
mcr_manipulation/mcr_arm_motions/common/config/: folded-candle_plan.yaml  folded-look_at_workspace_plan.yaml
mcr_manipulation/mcr_arm_motions/ros/config/: folded-candle_plan.yaml
mcr_manipulation/mcr_arm_motions/ros/launch/: cartesian_motion.test  trajectory_executor.launch
mcr_manipulation/mcr_arm_motions/ros/scripts/: planned_motion_node_combined  trajectory_executor_node
mcr_manipulation/mcr_arm_motions/ros/test/: cartesian_motion_test.py  planned_motion_unittest.py
mcr_manipulation/mcr_geometry_transformer/: CMakeLists.txt  package.xml  setup.py
mcr_manipulation/mcr_geometry_transformer/common/scripts/: geometry_transformer_util.py
mcr_manipulation/mcr_geometry_transformer/common/src/: geometry_transformer_util.cpp
mcr_manipulation/mcr_geometry_transformer/common/test/: geometry_transformer_util_test.cpp
mcr_manipulation/mcr_geometry_transformer/ros/launch/: wrench_transform_mockup_gui.launch
mcr_manipulation/mcr_manipulation_measurers/: CMakeLists.txt  README.md  package.xml
mcr_manipulation/mcr_manipulation_measurers/ros/launch/: component_wise_pose_error_calculator.launch  component_wise_pose_error_calculator.test  component_wise_pose_error_calculator_trigger.launch  pose_transformer.launch
mcr_manipulation/mcr_manipulation_monitors/: CMakeLists.txt  README.md  package.xml  setup.py
mcr_manipulation/mcr_manipulation_monitors/ros/launch/: component_wise_pose_error_calculator.launch  component_wise_pose_error_calculator.test  joint_position_monitor.launch  (+1 more)
mcr_manipulation/mcr_manipulation_msgs/: CMakeLists.txt  package.xml
mcr_manipulation/mcr_manipulation_msgs/msg/: ComponentWiseCartesianDifference.msg
mcr_manipulation/mcr_manipulation_pose_selector/: CMakeLists.txt
mcr_manipulation/mcr_manipulation_utils/: CMakeLists.txt  package.xml
mcr_manipulation/mcr_pose_selection/: CMakeLists.txt  package.xml  setup.py
mcr_manipulation/mcr_saved_trajectories/: CMakeLists.txt  package.xml  setup.py
mcr_manipulation/mcr_trajectory_saver/: CMakeLists.txt  package.xml  setup.py
(+981 files in other folders)
