cmake_minimum_required(VERSION 2.8.3)
project(mcr_common_msgs)
find_package(catkin REQUIRED 
  COMPONENTS
    roscpp
    rospy
    std_msgs
    message_generation
)

add_service_files(
  FILES
    ReturnString.srv
    ReturnBool.srv
    GetPose.srv
)

generate_messages(
  DEPENDENCIES
    std_msgs
    geometry_msgs
)

catkin_package(
  CATKIN_DEPENDS
    message_runtime
    std_msgs
    geometry_msgs
)
