<?xml version="1.0"?>

<package>

  <name>mcr_twist_demultiplexer</name>
  <version>0.1.0</version>
  <description>Twist Demultiplexer</description>

  <maintainer email="arkamallick30@gmail.com">Arka Mallick</maintainer>
  <maintainer email="santosh.thoduka@smail.inf.h-brs.de">Santosh Thoduka</maintainer>

  <license>GPLv3</license>

  <author email="arkamallick30@gmail.com">Arka Mallick</author>
  <author email="santosh.thoduka@smail.inf.h-brs.de">Santosh Thoduka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mcr_geometry_transformer</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mcr_geometry_transformer</run_depend>

</package>
