<?xml version="1.0"?>
<package>
  <name>mcr_twist_synchronizer</name>
  <version>0.1.0</version>
  <description>
  Synchronization of velocities of a twist
  (represented as a geometry_msgs/TwistStamped message),
  such that each component of a Cartesian error (compensated
  by the twist's velocities) simultaneously reaches zero.
  </description>
  <license>GPLv3</license>

  <maintainer email="jose.sanchez.loza@gmail.com">Jose Sanchez</maintainer>
  <author email="jose.sanchez.loza@gmail.com">Jose Sanchez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mcr_manipulation_msgs</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

</package>
