<?xml version="1.0"?>
<package>
  <name>mcr_aravis_vision</name>
  <version>0.0.1</version>
  <description>ROS wrapper for the aravis vision library to control and retrieve data from GigE cameras</description>

  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>

  <license>GPLv3</license>

  <author email="frederik.hegger@h-brs.de">Frederik Hegger</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>aravis_vision_library</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>mcr_node_diagnostic</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>aravis_vision_library</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
