<?xml version="1.0"?>
<package>
  <name>mcr_manipulation_measurers</name>
  <version>0.1.0</version>
  <description>
  A package to measure quantitative properties for manipulation tasks
  (e.g. measure the component-wise error between two poses).
  </description>
  <license>GPLv3</license>

  <maintainer email="jose.sanchez.loza@gmail.com">Jose Sanchez</maintainer>
  <author email="jose.sanchez.loza@gmail.com">Jose Sanchez</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>