<?xml version="1.0"?>
<package>
  <name>mcr_manipulation_utils</name>
  <version>0.0.0</version>
  <description>The mcr_manipulation_utils package</description>

  <author email="matthias.fueller@h-brs.de">Matthias Füller</author>
  <maintainer email="matthias.fueller@h-brs.de">Matthias Füller</maintainer>
  <maintainer email="sven.schneider@h-brs.de">Sven Schneider</maintainer>
  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>kdl_parser</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>kdl_parser</run_depend>


</package>