<?xml version="1.0"?>
<package>
  <name>mcr_trajectory_saver</name>
  <version>0.0.0</version>
  <description>The mcr_trajectory_saver package</description>

   <maintainer email="djordje.vukcevic@smail.inf.h-brs.de">Djordje Vukcevic</maintainer>
   <maintainer email="abhishek.padalkar@smail.inf.h-brs.de">Djordje Vukcevic</maintainer>

   <license>MIT</license>
   <author email="djordje.vukcevic@smail.inf.h-brs.de">Djordje Vukcevic</author>
   <author email="abhishek.padalkar@smail.inf.h-brs.de">Djordje Vukcevic</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
